old examples deleted

--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
-name=WebServer
+name=BAsicWebServer
 version=1.0
-author=Ivan Grokhotkov
+author=Petzoldt based on code from Ivan Grokhotkov
 maintainer=Ivan Grokhtkov <ivan@esp8266.com>
 sentence=Simple web server library
 paragraph=The library supports HTTP GET and POST requests, provides argument parsing, handles one client at a time.
